# mcprs

./: .cursorrules  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: main.rs
src/mcp/: server.rs
src/mcprs/: mcprs.rs  mod.rs
src/tools/: echo_tool.rs  mcprs_tool.rs  mod.rs
