[package]
name = "mcprs"
version = "0.1.0"
edition = "2024"
description = "MCP Router and Package manager"
authors = ["MCPRS Contributors"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
mcp-core = "0.1.50"
serde_json = "1.0.140"
tokio = { version = "1.45", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
